# dashboard_php

./: AUDITORIA_E_PLANO_MIGRACAO_PYTHON_PHP_10_SPRINTS.md  README.md
igreja_dashboard_python/: .dockerignore  .pre-commit-config.yaml  AGENTS.md  AUDITORIA_ADERENCIA_CLIENTE.md  DOCUMENTO_ACEITE_INSTITUCIONAL.md  Dockerfile  README.md  RELATORIO_AUDITORIA_ESCOPO.md  RELATORIO_AUDITORIA_TECNICA_FINAL.md  RELATORIO_CONFORMIDADE_FINAL.md  RELATORIO_FINAL_CONFORMIDADE.md  RELATORIO_POS_CORRECOES_ADERENCIA.md  RELATORIO_TESTES_RELEASE.md  docker-compose.yml  pyproject.toml  requirements.txt  static  templates
igreja_dashboard_python/alembic/: env.py  script.py.mako
igreja_dashboard_python/app/: cli.py  main.py
igreja_dashboard_python/data/: app.db-shm  app.db-wal
igreja_dashboard_python/docs/: ARQUITETURA.md  CONFIGURACOES.md  CONTRATO_TELAS_ENDPOINTS.md  CRIANCAS.md  DELIVERY_TRANSITION.md  ELEGIBILIDADE.md  ENTREGAS_EVENTO.md  FECHAMENTO_MENSAL.md  FLUXO_OPERACIONAL.md  FLUXO_TELAS_GAP_ANALYSIS.md  FLUXO_VALIDADO_TELAS.md  FRONT_BACK_MAPA_ATUAL.md  GUIA_DE_USO_DO_SISTEMA.md  HISTORICO_MENSAL.md  LGPD.md  MODULOS.md  MONTHLY_LOCK_RULES.md  PDF_ENGINE.md  PDF_EXPORTS.md  REESTRUTURACAO_REPOSITORIO.md  RELATORIO_OFICIAL_MENSAL.md  ROTEIRO_HOMOLOGACAO.md  ROTEIRO_HOMOLOGACAO_POR_PERFIL.md  SECURITY_LOCKOUT_RATE_LIMIT.md  SECURITY_RESET_PASSWORD.md  SEGURANCA.md  SMOKE_TESTS_E2E.md  UX_BUSCA_GLOBAL.md  deploy_docker.md  governanca_dados_lgpd.md  producao_hardening.md  seguranca_rbac.md
igreja_dashboard_python/scripts/: auditoria_tecnica_final.sh  db_backup.py  (+3 more)
(+265 files in other folders)
